Update maven pom.xml